--- a/resources/templates/home.html
+++ b/resources/templates/home.html
@@ -18,6 +18,8 @@
         {% endif %}
       </div>
     </div>
+      <div id="services"></div>
+    <div id="footer"></div>
 
     {% style "/css/ripples.min.css" %}
     {% style "/css/material.min.css" %}
