--- a/resources/templates/home.html
+++ b/resources/templates/home.html
@@ -5,17 +5,11 @@
       <title>Welcome to sportzbee</title>
   </head>
   <body>
-    <div id="reactnavbar"><p>React Nav Bar</div>
+    <div id="reactnavbar"></div>
     <div id="navbar"></div>
     <div id="app">
       <div class="container">
-        {% if dev %}
-        <p>If you're seeing this message, that means you haven't yet compiled your ClojureScript!</p>
-        <p>Please run <code>lein figwheel</code> to start the ClojureScript compiler and reload the page.</p>
-        <p>See <a href="http://www.luminusweb.net/docs/clojurescript.md">ClojureScript</a> documentation for further details.</p>
-        {% else %}
         <div class="three-quarters-loader">Loading…</div>
-        {% endif %}
       </div>
       </div>
     </br>
