Added some colors

--- a/resources/templates/home.html
+++ b/resources/templates/home.html
@@ -4,7 +4,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <title>Welcome to sportzbee</title>
   </head>
-  <body>
+  <body style="background-color:#E3F2FD">
     <div id="reactnavbar"></div>
     <div id="navbar"></div>
     <div id="app">
@@ -19,9 +19,10 @@
 
     {% style "/css/ripples.min.css" %}
     {% style "/css/material.min.css" %}
-      {% style "/css/screen.css" %}
-      {% style "/bootstrap-3.3.5/css/bootstrap-theme.min.css" %}
-      {% style "/bootstrap-3.3.5/css/bootstrap.min.css" %}
+    {% style "/css/material-fullpalette.min.css" %}
+    {% style "/css/screen.css" %}
+    {% style "/bootstrap-3.3.5/css/bootstrap-theme.min.css" %}
+    {% style "/bootstrap-3.3.5/css/bootstrap.min.css" %}
     <!-- scripts and styles
 
     {% style "/bootstrap-3.3.5/css/bootstrap.min.css" %}
