--- a/resources/templates/home.html
+++ b/resources/templates/home.html
@@ -3,7 +3,13 @@
       <META http-equiv="Content-Type" content="text/html; charset=UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <title>Welcome to sportzbee</title>
-  </head>
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.5/css/bootstrap-theme.min.css">
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.5/css/bootstrap.min.css">
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-material-design/0.3.0/css/material.min.css">
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-material-design/0.3.0/css/ripples.min.css">
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-material-design/0.3.0/css/material-fullpalette.min.css">
+
+    </head>
   <body style="background-color:#E3F2FD">
     <div id="reactnavbar"></div>
     <div id="navbar"></div>
@@ -17,12 +23,8 @@
     <div id="services"></div>
     <div id="footer"></div>
 
-    {% style "/css/ripples.min.css" %}
-    {% style "/css/material.min.css" %}
-    {% style "/css/material-fullpalette.min.css" %}
     {% style "/css/screen.css" %}
-    {% style "/bootstrap-3.3.5/css/bootstrap-theme.min.css" %}
-    {% style "/bootstrap-3.3.5/css/bootstrap.min.css" %}
+
     <!-- scripts and styles
 
     {% style "/bootstrap-3.3.5/css/bootstrap.min.css" %}
@@ -33,6 +35,10 @@
     {% style "/js/jquery.min.js" %}
     {% script "/bootstrap-3.3.5/js/bootstrap.min.js" %}
       -->
+    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-alpha1/jquery.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/bootstrap-material-design/0.3.0/js/material.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/bootstrap-material-design/0.3.0/js/ripples.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.5/js/bootstrap.min.js"></script>
 
     <script type="text/javascript">
         var context = "{{servlet-context}}";
