--- a/resources/templates/home.html
+++ b/resources/templates/home.html
@@ -15,6 +15,8 @@
     <div id="navbar"></div>
     <div id="app">
       <div class="container">
+        <p>Welcome th online social and digital sports platform for sports enthusiast to capture,
+            record and share sports events and matches</p>
         <div class="three-quarters-loader">Loading…</div>
       </div>
       </div>
