Added to the home page basic data

--- a/resources/templates/home.html
+++ b/resources/templates/home.html
@@ -15,8 +15,12 @@
     <div id="navbar"></div>
     <div id="app">
       <div class="container">
-        <p>Welcome th online social and digital sports platform for sports enthusiast to capture,
-            record and share sports events and matches</p>
+          <p>Welcome the online social and digital sports platform for sports enthusiasts</p>
+          <p> Here you can </p>
+          <p> - Organize sports events </p>
+          <p> - Participate in events around your </p>
+          <p> - Capture moments and Share with your friends </p>
+          <p> - Build a personal sports portfolio and cherish it for years</p>
         <div class="three-quarters-loader">Loading…</div>
       </div>
       </div>
