--- a/resources/templates/home.html
+++ b/resources/templates/home.html
@@ -1,4 +1,5 @@
-<html>
+<DOCTYPE html>
+ <html>
   <head>
       <META http-equiv="Content-Type" content="text/html; charset=UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1">
