--- a/resources/templates/home.html
+++ b/resources/templates/home.html
@@ -4,13 +4,13 @@
       <META http-equiv="Content-Type" content="text/html; charset=UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <title>Welcome to sportzbee</title>
-<!--
+
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.5/css/bootstrap-theme.min.css">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.5/css/bootstrap.min.css">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-material-design/0.3.0/css/material.min.css">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-material-design/0.3.0/css/ripples.min.css">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-material-design/0.3.0/css/material-fullpalette.min.css">
--->
+
     </head>
   <body style="background-color:#E3F2FD">
     <div id="reactnavbar"></div>
@@ -33,7 +33,7 @@
 
     {% style "/css/screen.css" %}
 
-    <!-- scripts and styles-->
+    <!-- scripts and styles
     {% script "/js/jquery.min.js" %}
     {% style "/bootstrap-3.3.5/css/bootstrap.min.css" %}
     {% script "/bootstrap-3.3.5/js/bootstrap.min.js" %}
@@ -45,13 +45,13 @@
 
     {% script "/js/material.min.js" %}
     {% script "/js/ripples.min.js" %}
+    -->
 
-     <!--
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-alpha1/jquery.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/bootstrap-material-design/0.3.0/js/material.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/bootstrap-material-design/0.3.0/js/ripples.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.5/js/bootstrap.min.js"></script>
--->
+
     <script type="text/javascript">
         var context = "{{servlet-context}}";
     </script>
